clusters/skus/skumanager/skumanager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skumanager
  namespace: skumanager
  labels:
    app.kubernetes.io/name: skumanager
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: skumanager
  template:
    metadata:
      labels:
        app: skumanager
    spec:
      containers:
        - name: app
          image: ghcr.io/cse-labs/skumanager:beta
          imagePullPolicy: Always
          args: [ ]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /version
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /version
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 60
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
