clusters/skus/skumanager/skumanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skumanager
  namespace: skumanager
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: skumanager
