clusters/skus/skumanager/skumanager/ingressHttp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skumanager
  namespace: skumanager
  annotations:
    kubernetes.io/ingress.class: contour
    ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: skumanager
            port:
              number: 8080
