clusters/skus/skumanager/skumanager/ingressHttps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skumanager
  namespace: skumanager
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - secretName: skumanager
    hosts:
    - skus.cseretail.com
  rules:
  - host: skus.cseretail.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: skumanager
            port:
              number: 8080
